// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setUserPermissions does not update user permissions if not authorized 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Du har ikke rettigheter til å oppdatere andres rettigheter",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`setUserPermissions emits error when failing to update user permissions 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Noe gikk galt under oppdatering av brukerens rettigheter",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`setUserPermissions updates user permissions if requested and user authorized 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "canVote": true,
        "completedRegistration": true,
        "id": 1,
        "name": "Namy",
        "permissions": 5,
        "registerDate": undefined,
      },
      "type": "ADD_USER",
    },
  ],
]
`;

exports[`setUserPermissions updates user permissions if requested and user authorized 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "canVote": true,
        "completedRegistration": true,
        "id": 1,
        "name": "Namy",
        "permissions": 5,
        "registerDate": undefined,
      },
      "type": "ADD_USER",
    },
  ],
]
`;

exports[`toggleCanVote emits error when user does not have CAN_VOTE permission 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Brukeren har ikke stemmerett og har derfor ikke lov til å stemme.",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`toggleCanVote emits error when user does not have CAN_VOTE permission 2`] = `Array []`;

exports[`toggleCanVote emits toggled can vote action on success 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "canVote": false,
        "id": 1,
      },
      "type": "TOGGLE_CAN_VOTE",
    },
  ],
]
`;

exports[`toggleCanVote emits toggled can vote action on success 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "canVote": false,
        "id": 1,
      },
      "type": "TOGGLE_CAN_VOTE",
    },
  ],
]
`;
